[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/GameManager.cs" type="Script" id=1]
[ext_resource path="res://scripts/Client.gd" type="Script" id=2]
[ext_resource path="res://cards/playable/Boolean.tscn" type="PackedScene" id=3]
[ext_resource path="res://cards/playable/Ping.tscn" type="PackedScene" id=4]
[ext_resource path="res://cards/playable/CardBack.tscn" type="PackedScene" id=5]
[ext_resource path="res://cards/playable/Double.tscn" type="PackedScene" id=6]
[ext_resource path="res://cards/playable/Defrag.tscn" type="PackedScene" id=7]
[ext_resource path="res://cards/playable/Echo.tscn" type="PackedScene" id=8]
[ext_resource path="res://cards/playable/Float.tscn" type="PackedScene" id=9]
[ext_resource path="res://cards/playable/Handshake.tscn" type="PackedScene" id=10]
[ext_resource path="res://cards/playable/Firewall.tscn" type="PackedScene" id=11]
[ext_resource path="res://cards/playable/Glitch.tscn" type="PackedScene" id=12]
[ext_resource path="res://cards/playable/Splice.tscn" type="PackedScene" id=13]
[ext_resource path="res://cards/playable/Turnkey.tscn" type="PackedScene" id=14]
[ext_resource path="res://cards/playable/Host.tscn" type="PackedScene" id=15]
[ext_resource path="res://cards/playable/Scrape.tscn" type="PackedScene" id=16]
[ext_resource path="res://cards/playable/Probe.tscn" type="PackedScene" id=17]
[ext_resource path="res://cards/playable/ReInitialize.tscn" type="PackedScene" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 140 )

[node name="Main" type="Node2D"]

[node name="Client" type="Node" parent="."]
script = ExtResource( 2 )

[node name="OpponentZone" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 280.0

[node name="DropZone" type="Panel" parent="."]
margin_top = 400.0
margin_right = 1280.0
margin_bottom = 680.0

[node name="Area2D" type="Area2D" parent="DropZone"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropZone/Area2D"]
position = Vector2( 640, 140 )
shape = SubResource( 1 )

[node name="PlayerZone" type="Panel" parent="."]
margin_top = 800.0
margin_right = 1280.0
margin_bottom = 1080.0

[node name="Button" type="Button" parent="."]
margin_left = 1424.0
margin_top = 475.0
margin_right = 1564.0
margin_bottom = 525.0
rect_scale = Vector2( 2, 2 )
text = "Draw Cards"

[node name="GameManager" type="Node" parent="."]
script = ExtResource( 1 )
BooleanScene = ExtResource( 3 )
DefragScene = ExtResource( 7 )
DoubleScene = ExtResource( 6 )
EchoScene = ExtResource( 8 )
FirewallScene = ExtResource( 11 )
FloatScene = ExtResource( 9 )
GlitchScene = ExtResource( 12 )
HandshakeScene = ExtResource( 10 )
HostScene = ExtResource( 15 )
PingScene = ExtResource( 4 )
ProbeScene = ExtResource( 17 )
ReInitializeScene = ExtResource( 18 )
ScrapeScene = ExtResource( 16 )
SpliceScene = ExtResource( 13 )
TurnKeyScene = ExtResource( 14 )
CardBackScene = ExtResource( 5 )

[connection signal="deal_cards" from="Client" to="GameManager" method="DealCards"]
[connection signal="draw_cards" from="Client" to="GameManager" method="DrawCards"]
[connection signal="dropped_card" from="Client" to="GameManager" method="RenderOpponentCardDrop"]
[connection signal="render_cards" from="Client" to="GameManager" method="RenderOpponentCardBacks"]
[connection signal="button_down" from="Button" to="GameManager" method="OnDrawCardsButtonDown"]
[connection signal="CardDropped" from="GameManager" to="Client" method="_on_card_dropped"]
[connection signal="CardsDrawn" from="GameManager" to="Client" method="_on_cards_drawn"]
